# kdominate

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  snapcraft.yaml
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
po/ar/: kdominate.po
po/ca/: kdominate.po
po/ca@valencia/: kdominate.po
po/cs/: kdominate.po
po/de/: kdominate.po
po/es/: kdominate.po
po/fr/: kdominate.po
po/he/: kdominate.po
po/it/: kdominate.po
po/ka/: kdominate.po
po/nl/: kdominate.po
po/pt_BR/: kdominate.po
po/sk/: kdominate.po
po/sl/: kdominate.po
po/tr/: kdominate.po
po/uk/: kdominate.po
po/zh_CN/: kdominate.po
src/: CMakeLists.txt  Messages.sh  game.cpp  game.h  kboardwidget.cpp  kboardwidget.h  kdominate.cpp  kdominate.h  kdominate.kcfg  kdominate.qrc  kdominate_ai.cpp  kdominate_ai.h  kdominate_board.cpp  kdominate_board.h  kdominateui.rc  ktilewidget.cpp  ktilewidget.h  main.cpp  maps.cpp  org.kde.kdominate.appdata.xml  org.kde.kdominate.desktop  org.kde.kdominate.metainfo.xml  prefs.kcfgc  settings.ui  settingswidget.h
src/maps/: 1-empty-small.map  2-empty-medium.map  3-empty-large.map  columns.map  corridor.map  island.map  rocks.map  spiral.map  testing-bug1.map  testing-bug2.map  testing-bug3.map  testing-bug4.map  testing-bug5.map  testing-bug5b.map  testing-bug6.map  testing-bug7.map  testing-hang.map  trees.map  walls.map
tests/: CMakeLists.txt  kdominate_ai_test.cpp
tests/maps/: do-not-delay-draw-walls.map  do-not-delay-draw.map  do-not-delay-lose.map  jump-to-draw.map  jump-to-win.map  win-1-move.map  winable.map
